# meldlane-transcribe

./: .gitignore  README.md  README.ru.md  pyproject.toml
meldlane_transcribe/: __init__.py  audio_utils.py  capture.py  cli.py  config.py  models.py  sessions.py  transcriber.py  wasapi.py
tests/: test_audio_utils.py  test_models.py
