[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meldlane-transcribe"
version = "0.1.0"
description = "Meeting transcription: audio file or live mic+system capture -> structured JSON transcript with timeline and speakers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roman Fakhrutdinov" }]
requires-python = ">=3.11"
keywords = [
    "transcription", "speech-to-text", "stt", "whisper", "faster-whisper",
    "meeting-transcription", "audio-transcription", "speaker-diarization",
    "voice-recognition", "asr", "zoom", "google-meet", "wasapi", "loopback",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "faster-whisper",
    "sounddevice",
    "scipy",
    "numpy",
    "typer",
    "pydantic",
    "pyaudiowpatch; sys_platform == 'win32'",
]

[project.optional-dependencies]
diarize = ["pyannote.audio"]

[project.scripts]
mtranscribe = "meldlane_transcribe.cli:main"

[tool.setuptools.packages.find]
include = ["meldlane_transcribe*"]
